# mobilews

./: README.md
docs/: unstructuredmess.md
espfw/: CMakeLists.txt  sdkconfig
espfw/main/: CMakeLists.txt  batsens.c  batsens.h  button.c  button.h  i2c.c  i2c.h  lps35hw.c  lps35hw.h  ltr390.c  ltr390.h  main.c  mobilenet.c  mobilenet.h  rg15.c  rg15.h  rgbled.c  rgbled.h  secrets.h.template  sen50.c  sen50.h  sht4x.c  sht4x.h  submit.c  submit.h  webserver.c  webserver.h  wifiap.c  wifiap.h  windsens.c  windsens.h  wk2132.c  wk2132.h
picofw/: CMakeLists.txt  README.md
picofw/src/: .gitignore  main.c
